# forum_project

./: .gitignore  Dockerfile  README.md  admin.py  auth.py  categories.py  db.py  main.py  models.py  posts.py  pyproject.toml  requirements.txt  schemas.py  terminal_log  topics.py  utils.py
misc/: docker_refresh  terminal_log
sql/: Model.mwb  create_mariadb.sql  create_my.sql  new_ERD_model.erd  new_db_postgre.sql  old_postgres_create_with_drop.sql  postgres_create.sql
